Fix jumpy submit button

--- a/src/components/NewsletterSignup.scss
+++ b/src/components/NewsletterSignup.scss
@@ -38,7 +38,6 @@
   }
 
   .btn-download:hover {
-    margin-top: 1rem;
     color: var(--link-hover);
   }
 }
